# pyroll-freiberg-spreading

./: README.md  hatch.toml  pyproject.toml
pyroll/freiberg_spreading/: __init__.py  coefficients_lib.py  freiberg_spreading.py  hookspecs.py  materials.py
pyroll/freiberg_spreading/materials/: __init__.py  backup.py  c20.py  c45.py  s355j2.py
pyroll/freiberg_spreading/passes/: __init__.py  diamond_diamond.py  diamond_square.py  oval_round.py  oval_square.py  round_oval.py  square_diamond.py  square_oval.py
pyroll_freiberg_spreading/: __init__.py  coefficients_lib.py  freiberg_spreading.py  hookspecs.py
pyroll_freiberg_spreading/materials/: backup.py  c20.py  c45.py  s355j2.py
pyroll_freiberg_spreading/passes/: __init__.py  diamond_diamond.py  diamond_square.py  oval_round.py  oval_square.py  round_oval.py  square_diamond.py  square_oval.py
tests/: config.yaml  input.py  test_filling_curves.py  test_solve.py
