[tool.poetry]
name = "pyroll-freiberg-spreading"
version = "0.1.0"
description = "Plugin for PyRoll providing the Freiberg spreading model for elongation passes"
authors = [
    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
]

[tool.poetry.dependencies]
python = "^3.10"
pyroll = "^0.3.0"

[tool.poetry.dev-dependencies]
pyroll = { git = "https://gitlab.hrz.tu-chemnitz.de/imf-numerik/pyroll.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
