[tool.poetry]
name = "pyroll-freiberg-spreading"
version = "1.0.0"
description = "Plugin for PyRoll providing the Freiberg spreading model for elongation passes"
authors = [
    "Matthias Schmidtchen <matthias.schmidtchen@imf.tu-freiberg.de>",
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
    "Max Stirl <max.stirl@imf.tu-freiberg.de>"
]
packages = [{ include = "pyroll/freiberg_spreading" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyroll = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
