[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroll-freiberg-spreading"
description = "Plugin for PyRolL providing the Freiberg empirical spreading model."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
    { name = "Matthias Schmidtchen", email = "matthias.schmidtchen@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]
requires-python = ">=3.9, <4.0"

dependencies = [
    "pyroll-core ~= 2.0"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll-project.github.io"
Repository = "https://github.com/pyroll-project/pyroll-freiberg-spreading"
Documentation = "https://github.com/pyroll-project/pyroll-freiberg-spreading/blob/main/docs/docs.pdf"
